# MultiScreenSaver

./: .clang-format  CMakeLists.txt  README.md  app.rc  main.cpp  saverframe.cpp  saverframe.h  vcpkg.json
gui/: CMakeLists.txt  config.cpp  config.fbp  config.h  config_base.cpp  config_base.h
icon/: iconconvert.sh
